[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/Sprite/heart pixel art 48x48.png" type="Texture" id=1]
[ext_resource path="res://asset/Fonts/HealthTheme.tres" type="Theme" id=2]
[ext_resource path="res://asset/Music/Lose.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/script/HealthStatus.gd" type="Script" id=4]

[node name="HealthStatus" type="HBoxContainer"]
margin_left = 18.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 66.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 52.0
margin_right = 117.0
margin_bottom = 48.0

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 21.0
text = "Player"

[node name="TimeLeft" type="Label" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 65.0
margin_bottom = 46.0
text = "02:30"

[node name="HealthTime" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="HealthTime" to="." method="_on_timeout"]
